<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@drawable/background"
    tools:context="com.inducesmile.androidloginsystem.SignUpActivity">

    <ImageView
        android:id="@+id/business_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/logo" />

    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/business_logo"
        android:layout_marginTop="@dimen/_4sdp"
        android:padding="@dimen/_4sdp"
        android:text="@string/no_text"
        android:textColor="@color/colorAccent" />

    <EditText
        android:id="@+id/names"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/login_error"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bottom_border"
        android:hint="@string/name_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/_8sdp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/names"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bottom_border"
        android:hint="@string/username_hint"
        android:inputType="text"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/_8sdp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bottom_border"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/_8sdp"
        android:singleLine="true" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_4sdp"
        android:background="@drawable/bottom_border"
        android:hint="@string/password_hint"
        android:inputType="textPassword"
        android:maxLines="1"
        android:textColor="@color/colorWhite"
        android:padding="@dimen/_8sdp"
        android:singleLine="true" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:paddingBottom="@dimen/_16sdp"
        android:paddingTop="@dimen/_16sdp"
        android:text="@string/create_account"
        android:textAllCaps="true"
        android:textColor="@color/colorWhite"
        android:background="@color/colorRegister"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/forgotten_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/create_account_button"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:padding="@dimen/_4sdp"
        android:text="@string/terms_of_service"
        android:textColor="@color/colorWhite" />

</RelativeLayout>
