<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/_16sdp"
    android:background="@drawable/background"
    tools:context="com.inducesmile.androidloginsystem.ResetPasswordActivity">

    <ImageView
        android:id="@+id/business_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_40sdp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/instruction"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/business_logo"
        android:textColor="@color/colorWhite"
        android:text="@string/recovery"
        android:textSize="16sp"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"/>

    <TextView
        android:id="@+id/login_error"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/instruction"
        android:textColor="@color/colorAccent"
        android:text="@string/no_text"
        android:padding="@dimen/_8sdp"
        android:layout_marginTop="@dimen/_8sdp"/>

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/email_hint"
        android:inputType="textEmailAddress"
        android:maxLines="1"
        android:padding="@dimen/_8sdp"
        android:background="@drawable/bottom_border"
        android:layout_below="@+id/login_error"
        android:textColor="@color/colorWhite"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_8sdp"
        android:singleLine="true" />

    <Button
        android:id="@+id/reset_button"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email"
        android:layout_centerHorizontal="true"
        android:textColor="@color/colorWhite"
        android:text="@string/login_button"
        android:paddingBottom="@dimen/_12sdp"
        android:paddingTop="@dimen/_12sdp"
        android:textStyle="bold"
        android:background="@color/colorRegister"
        android:layout_marginTop="@dimen/_8sdp"/>


</RelativeLayout>
