<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    tools:context="com.inducesmile.androidloginsystem.LoginActivity">

    <ImageView
        android:id="@+id/business_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/_80sdp"
        android:src="@drawable/logo"
        android:contentDescription="@string/app_name"/>

    <TextView
        android:id="@+id/tag_line"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/business_logo"
        android:textColor="@color/colorWhite"
        android:textSize="@dimen/_18sdp"
        android:text="@string/welcome"
        android:layout_marginTop="12dp"/>


    <Button
        android:id="@+id/login_button"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="24dp"
        android:layout_marginRight="@dimen/_4sdp"
        android:background="@color/colorLogin"
        android:text="@string/login_button"/>

    <Button
        android:id="@+id/sign_up_button"
        android:layout_width="@dimen/_140sdp"
        android:layout_height="@dimen/_100sdp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignTop="@+id/login_button"
        android:textColor="@color/colorWhite"
        android:textStyle="bold"
        android:text="@string/sign_up_button"
        android:background="@color/colorRegister"
        android:layout_marginLeft="@dimen/_4sdp"
        android:layout_marginBottom="24dp"/>


</RelativeLayout>
